--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ h4 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 100%;
-  height: 700px;
+  height: 600px;
   text-align: center;
   padding-top: 20px;
   font-size: 10px;
@@ -135,4 +135,41 @@ h4 {
 
 hr {
   padding: 10px 30px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  text-align: left;
+}
+
+span {
+  font-size: 20px;
+  color: green;
+}
+
+#premium-title {
+  color: rgb(222, 200, 96);
+}
+
+#business-title {
+  color: rgb(213, 94, 207);
+}
+
+#enterprise-title {
+  color: rgb(81, 159, 191);
+}
+
+footer {
+  background-color: rgb(84, 84, 84);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 40px;
+  height: 40px;
 }
