--- a/css/styles.css
+++ b/css/styles.css
@@ -119,15 +119,20 @@ h4 {
   text-align: center;
   padding-top: 20px;
   font-size: 10px;
+  background-color: #fff;
+}
+
+.card-header {
+  height: 130px;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.container {
+/* .container {
   padding: 2px 16px;
-}
+} */
 
 .card p {
   padding: 20px 30px;
@@ -139,15 +144,35 @@ hr {
 
 ul {
   list-style-type: none;
+  padding-left: 20px;
 }
 
 li {
   text-align: left;
 }
 
-span {
-  font-size: 20px;
+li.row {
+  margin: 0;
+}
+
+.span-checkmark {
+  font-size: 15px;
   color: green;
+  padding-left: 10px;
+}
+
+.no-checkmark {
+  color: #fff;
+}
+
+.span-planBullet {
+  font-size: 12px;
+  color: rgb(84, 84, 84);
+  padding-left: 10px;
+}
+
+#basic-title {
+  color: rgb(49, 49, 49);
 }
 
 #premium-title {
@@ -172,4 +197,8 @@ footer {
   color: #ffffff;
   margin-top: 40px;
   height: 40px;
+}
+
+footer p {
+  padding-top: 10px;
 }
