--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,33 @@ hr {
   padding: 10px 30px;
 }
 
+.price-font {
+  font-weight: lighter;
+}
+
+#basic-title {
+  color: rgb(49, 49, 49);
+}
+
+#premium-title {
+  color: rgb(222, 200, 96);
+}
+
+#business-title {
+  color: rgb(213, 94, 207);
+}
+
+#enterprise-title {
+  color: rgb(81, 159, 191);
+}
+
+#basic-title,
+#business-title,
+#premium-title,
+#enterprise-title {
+  font-weight: 100;
+}
+
 .plans-list {
   list-style-type: none;
   padding-left: 20px;
@@ -169,22 +196,6 @@ hr {
   font-size: 12px;
   color: rgb(84, 84, 84);
   padding-left: 10px;
-}
-
-#basic-title {
-  color: rgb(49, 49, 49);
-}
-
-#premium-title {
-  color: rgb(222, 200, 96);
-}
-
-#business-title {
-  color: rgb(213, 94, 207);
-}
-
-#enterprise-title {
-  color: rgb(81, 159, 191);
 }
 
 footer {
