--- a/css/styles.css
+++ b/css/styles.css
@@ -279,9 +279,6 @@ footer {
   text-align: center;
   color: #ffffff;
   margin-top: 40px;
-  height: 40px;
-}
-
-footer p {
-  padding-top: 10px;
+  height: 80px;
+  line-height: 100px;
 }
